eliminate packed smoke source debt